--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Erik Aranda-Wikman</h1>
-      <p>I'm a <span class="typed" data-typed-items="Data Analyst, Python Developer, Web Developer, Experienced Investigator, Behavior Analyst"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Data Analyst, Python Developer, Web Developer"></span></p>
       <div class="social-links">
         <a href="www.twitter.com/w3bbp" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="www.facebook.com/edwikman" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -81,10 +81,13 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Developer &amp; Analyst.</h3>
             <p class="fst-italic">
-              <p>I have performed investigatory research and implemented programs across multiple sectors, including healthcare, civil and criminal justice.</p>        
+              <p>I have performed implemented programs, managed projects, and conducted research across multiple sectors, including healthcare, civil and criminal justice.</p>        
+                <li>Python Developer: A main focus of my computer science experience, I have created data analysis projects to the server and back end side of web development.</li>
+                <li>Web Developer: HTML, CSS, and JavaScript are among the languages that I am proficient in.</li>
+                <li>BootStrap: Full use of the BootStrap framework in the development of my programs and websites.</li>
+                <li>Data Analytics: Fluent in statistical software and analysis, including data cleaning and statistical inference.</li>
                 <li>Research Methods: Well-versed and knowledgeable in research methods in a business setting.</li>
                 <li>Investigations: Investigatory skills and experience coupled with extreme attention to detail.</li>
-                <li>Data Analytics: Fluent in statistical software and analysis, including data cleaning and statistical inference.</li>
                 <li>Project Management: Excellent project management and communication skills.</li>
                 <hr>
             </p>
@@ -102,7 +105,7 @@
                 </ul>
               </div>
             </div>
-            <p>Research Methods • Criminal Investigations • Civil Investigation • Attention to Detail • Statistical Analysis and Inference • Data Analytics • Statistical Software (Python, R, Stata, Tableau)</p>
+            <p>Statistical Analysis and Inference • Data Analytics • Statistical Software (Python, R, Stata, Tableau) • Data Query (SQL) • Research Methods • Criminal Investigations • Civil Investigation • Attention to Detail</p>
 
           </div>
         </div>
@@ -113,18 +116,7 @@
     <!-- ======= Portfolio Section ======= -->
     <div class="section-title">
       <h2>Portfolio</h2>
-      <p>My portfolio is currently being put together and uploaded to the <em>INTERWEBS</em>. The portfolio will include websites, python applications, and more. Stay Tuned!</p>
-    </div>
-
-    <section id="portfolio" class="portfolio section-bg">
-      <div class="container col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <img src="assets/img/huma-kabakci-oRk4Ep65tRc-unsplash.jpeg" class="img-fluid" alt="">
-          </div>
-        </div>
-      </div>
-      <!-- <div class="container" data-aos="fade-up">
+      <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Portfolio</h2>
@@ -135,44 +127,45 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Python</li>
-              <li data-filter=".filter-card">Data Analytics</li>
-              <li data-filter=".filter-web">Investigations</li>
+              <li data-filter=".filter-python">Python</li>
+              <li data-filter=".filter-data">Data Analytics</li>
+              <li data-filter=".filter-investigations">Investigations</li>
+              <li data-filter=".filter-web">Research</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4>Simple Personal Website</h4>
+                <p>Website</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Simple Personal Website"><i class="bx bx-plus"></i></a>
+                  <a href="/projects/simple-webpage.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-python">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Snake</h4>
+                <p>A Classic Game - Made in Python</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Snake"><i class="bx bx-plus"></i></a>
+                  <a href="/projects/snake.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -270,10 +263,11 @@
             </div>
           </div>
 
-        </div>
+        </div> -->
 
       </div> -->
-    </section><!-- End Portfolio Section -->
+    </section>
+    <!-- End Portfolio Section
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
@@ -297,7 +291,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box iconbox-orange ">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -309,7 +303,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box iconbox-pink">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -416,7 +410,8 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>edwikman@gmail.com</p>
+                <p>Personal: edwikman@gmail.com</p>
+                <p>Developer: pythonerik@gmail.com</p>
               </div>
 
               <div class="phone">
@@ -449,7 +444,8 @@
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <!-- <div class="sent-message">Your message has been sent. Thank you!</div> -->
+                <div class="sent-message">This form is not functional yet.</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
@@ -467,14 +463,14 @@
   <footer id="footer">
     <div class="container">
       <h3>Erik Aranda-Wikman</h3>
-      <p>Dedication to all things development.</p>
+      <p>Dedication to all things development and analytics.</p>
       <div class="social-links">
         <a href="www.twitter.com/w3bbp" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="www.facebook.com/edwikman" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="www.linkedin.com/in/edwikman" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Erik Aranda-Wikman</span></strong>. All Rights Reserved
+        &copy; Copyright - 2021<strong><span> Erik Aranda-Wikman</span></strong>. All Rights Reserved
       </div>
 
     </div>
