--- a/index.html
+++ b/index.html
@@ -117,19 +117,16 @@
     <div class="section-title">
       <h2>Portfolio</h2>
       <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>See some of my work that I have produced and developed. Each has it's own unique story behind it.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-python">Python</li>
-              <li data-filter=".filter-data">Data Analytics</li>
-              <li data-filter=".filter-investigations">Investigations</li>
+              <li data-filter=".filter-app">Python</li>
+              <li data-filter=".filter-card">Data Analytics</li>
+              <li data-filter=".filter-web">Web Development</li>
               <li data-filter=".filter-web">Research</li>
             </ul>
           </div>
