--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title home text-center">
-                                    <img src="img/phantom.png" alt="">
+                                    <h1>ERIK ARANDA-WIKMAN</h1>>
                                     <p>A product designer from England, who focuses on interactive design &amp; A freelance designer focusing on typography &amp; clean interfaces. Also works in Google.</p>
                                 </div>
 
