--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                                 <span class="icon">
                                                     <i class="tf-tools-2"></i>
                                                 </span>
-                                                <span class="title">Services</span>
+                                                <span class="title">Skills</span>
                                             </span>
                                             <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                         </a>    
@@ -127,7 +127,7 @@
                                                 <span class="icon">
                                                     <i class="tf-tools"></i>
                                                 </span>
-                                                <span class="title">Resume</span>
+                                                <span class="title">Experience</span>
                                             </span>
                                             <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                         </a>
@@ -148,7 +148,7 @@
                                                 <span class="icon">
                                                     <i class="tf-briefcase2"></i>
                                                 </span>
-                                                <span class="title">Works</span>
+                                                <span class="title">Portfolio</span>
                                             </span>
                                             <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                         </a>
