--- a/about.html
+++ b/about.html
@@ -72,46 +72,46 @@
                                 </div>
                                 <div class="skill-wrapper">
                                     <div class="progress clear">
-                                        <div class="skill-name">Photoshop</div>
+                                        <div class="skill-name">Python</div>
                                         <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
                                         <div class="skill-lavel" data-skill-value="90%"></div>
                                     </div> <!-- /.progress -->
                                     <div class="progress clear">
-                                        <div class="skill-name">Illustrator</div>
+                                        <div class="skill-name">HTML</div>
                                         <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
                                         <div class="skill-lavel" data-skill-value="78%"></div>
                                     </div> <!-- /.progress -->
                                     <div class="progress clear">
-                                        <div class="skill-name">After Fffects</div>
-                                        <div class="skill-bar">
-                                            <div class="bar"></div>
-                                        </div>
-                                        <div class="skill-lavel" data-skill-value="85%"></div>
-                                    </div> <!-- /.progress -->
-                                    <div class="progress clear">
-                                        <div class="skill-name">HTML5</div>
-                                        <div class="skill-bar">
-                                            <div class="bar"></div>
-                                        </div>
-                                        <div class="skill-lavel" data-skill-value="95%"></div>
-                                    </div> <!-- /.progress -->
-                                    <div class="progress clear">
-                                        <div class="skill-name">WordPress</div>
+                                        <div class="skill-name">CSS</div>
                                         <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
                                         <div class="skill-lavel" data-skill-value="70%"></div>
                                     </div> <!-- /.progress -->
                                     <div class="progress clear">
-                                        <div class="skill-name">jQuery</div>
+                                        <div class="skill-name">Bootstrap</div>
                                         <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="75%"></div>
+                                        <div class="skill-lavel" data-skill-value="80%"></div>
+                                    </div> <!-- /.progress -->
+                                    <div class="progress clear">
+                                        <div class="skill-name">SQL</div>
+                                        <div class="skill-bar">
+                                            <div class="bar"></div>
+                                        </div>
+                                        <div class="skill-lavel" data-skill-value="50%"></div>
+                                    </div> <!-- /.progress -->
+                                    <div class="progress clear">
+                                        <div class="skill-name">JavaScript</div>
+                                        <div class="skill-bar">
+                                            <div class="bar"></div>
+                                        </div>
+                                        <div class="skill-lavel" data-skill-value="60%"></div>
                                     </div> <!-- /.progress -->
                                 </div> <!-- /.skill-wrapper -->
                             </div> <!-- /.col -->
@@ -122,7 +122,7 @@
                         <div class="container">
                             <div class="flex flex-middle space-between">
                                 <span class="prev-page"><a href="welcome.html" class="link">&larr; Prev Page</a></span>
-                                <span class="copyright hidden-xs">Copyright &copy; 2016 Phantom, All Rights Reserved.</span>
+                                <span class="copyright hidden-xs">Copyright &copy; 2021 <strong>Erik Aranda-Wikman</strong>, All Rights Reserved.</span>
                                 <span class="next-page"><a href="services.html" class="link">Next Page &rarr;</a></span>
                             </div>
                         </div>
